Submit password button

--- a/Website/index.html
+++ b/Website/index.html
@@ -25,8 +25,8 @@
 	
 	<div id="passForm" class="center">
 	<form>
-		<input type="text" id="pswd"
-		<input type="button" value="Submit" onclick="checkPswd();" />
+		<input type="text" id="pswd">
+		<button type="button" value="Submit" onclick="checkPswd()"></button> />
 	</form>
 	</div>
 	
